--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
   "minimum-stability": "dev",
   "require": {
     "php": ">=5.4.0",
-	"yiisoft/yii2": ">=2.0.6"
+	"yiisoft/yii2": ">=2.0.6",
+    "sharetrip/alisms": "dev-master"
   },
   "autoload": {
     "psr-4": {
