--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,7 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.4.0",
-	"yiisoft/yii2": ">=2.0.6",
-    "sharetrip/alisms": "dev-master"
+    "php": ">=5.4.0"	
   },
   "autoload": {
     "psr-4": {
