--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.4.0"	
+    "php": ">=5.6.0"	
   },
   "autoload": {
     "psr-4": {
-      "Sharetrip\\Alisms\\": ""
+      "Sharetrip\\Alisms\\": ""src/""
     }
   }
 }
